# rt-cosmik

./: .gitignore  CMakeLists.txt  LICENSE  README.md  package.xml
apps/: check_data_gepetto_viewer.py  check_lstm_frames.py  check_pin_model.py  check_rgbcams_info.py  check_urdf_model.py  custom_pose_tracker.py  get_AT_and_q0.py  plot_accel.py  read_data.py  read_ik_data.py  rt_cosmik.py  rt_cosmik_realsense.py  rt_cosmik_rgbcams.py  rt_cosmik_rgbcams_5dof.py  rt_cosmik_rgbcams_wb.py  rt_cosmik_rgbcams_wb_gv.py  rt_cosmik_rgbcams_wb_rviz.py  rtmpose_2IR.py  rtmpose_2realsense.py  rtmpose_onnx_2realsense.py  rtmpose_with_depth.py  run_ik_offline.py  test_cam_setup.py  test_ik.py  test_ik_rviz.py  test_pose_tracker.py  test_pose_tracker_realsense.py  test_pose_tracker_rgbcam.py  test_swika.py  test_with_lstm_rs.py
cams_calibration/: calib_utils.py  calibrate_cameras.py  calibrate_cameras_IR.py  calibrate_rs.py  cam_in_world.py  check_pinpointed_frames.py  get_human_base_frame.py  get_relative_translation.py  get_relative_translation_rs.py  get_robot_base_frame.py  rs_in_world.py  set_world_frame.py
cams_calibration/cam_params/: c1_params_color_test_test.yml  c1_params_ir_test_test.yml  c1_to_c2_params_color_test_test.yml  c1_to_c2_params_ir_test_test.yml  c2_params_color_test_test.yml  c2_params_ir_test_test.yml  camera1_pose_test_test.yml  camera2_pose_test_test.yml
handover/: get_traj_for_irl.py
launch/: start_viz.launch
models/human_urdf/urdf/: human.urdf  (+1 more)
unittests/: check_lstm_frames.py  check_output.py  check_pin_model.py  check_rgbcams_info.py  check_urdf_5dof.py  check_urdf_model.py  test_ik.py  test_ik_rviz.py  test_pose_tracker_rgbcam.py  test_swika.py  test_swika_rviz.py
urdf/: 5dof_mpc_base.urdf.xacro  human.urdf  human.urdf.xacro  human_5dof.urdf
utils/: calib_utils.py  ik_utils.py  linear_algebra_utils.py  lstm_utils.py  lstm_v2.py  model_utils.py  read_write_utils.py  ros_utils.py  settings.py  triangulation_utils.py  utilsDataman.py  viz_utils.py
(+8 files in other folders)
